nfe_nfce_erpnext/public/css/pos.css
body[data-route="point-of-sale"] .point-of-sale-app > .payment-container > .payment-modes {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-flow: row;
}

.point-of-sale-app > .items-selector > .items-container > .item-wrapper > .item-detail > .item-rate {
    font-size: var(--text-xs);
    font-weight: 400;
}

.point-of-sale-app > .items-selector > .items-container > .item-wrapper > .item-detail > .item-name {
    font-size: var(--text-base);
    font-weight: 600;
    white-space: wrap;
}

.point-of-sale-app > .items-selector > .items-container > .item-wrapper > .item-detail {
    height: auto;
    padding: var(--margin-sm);
}

.point-of-sale-app > .items-selector > .items-container > .item-wrapper {
    align-content: center;
}

